[gd_scene load_steps=13 format=3 uid="uid://cnpc6hkiah3hu"]

[ext_resource type="Script" path="res://Scripts/deposit.gd" id="1_8v273"]
[ext_resource type="Shader" path="res://Shaders/fuser.gdshader" id="2_6bnjf"]
[ext_resource type="FontFile" uid="uid://bl8p2kairyiyn" path="res://Assets/Fonts/PixelByzantine_old.ttf" id="2_8jj18"]
[ext_resource type="Texture2D" uid="uid://c8ccjwnpgm0kt" path="res://Assets/Cards/border_card.png" id="3_1mppw"]
[ext_resource type="FontFile" uid="uid://cvppyanwmhfuq" path="res://Assets/Fonts/JinxedWizards.ttf" id="5_amiyj"]
[ext_resource type="AudioStream" uid="uid://ddxcdj6cmdben" path="res://Assets/Sounds/paper_tear.wav" id="6_gkmox"]
[ext_resource type="Shader" path="res://Scripts/deposit.gdshader" id="7_6usdl"]
[ext_resource type="Texture2D" uid="uid://7pk2rita4rh2" path="res://Assets/Cards/Symbols/boiling_water.png" id="8_gbjpb"]
[ext_resource type="Texture2D" uid="uid://oi1ey0n5thyv" path="res://Assets/Cards/Symbols/arrow.png" id="9_cjryq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uk5p0"]
shader = ExtResource("2_6bnjf")
shader_parameter/color = Color(0.494118, 0.521569, 0.133333, 1)
shader_parameter/width = 1.947
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u6r7g"]
size = Vector2(96, 130)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8fbax"]
shader = ExtResource("7_6usdl")
shader_parameter/color = Color(1, 1, 1, 1)

[node name="Fuser" type="StaticBody2D"]
process_mode = 3
script = ExtResource("1_8v273")

[node name="deposit_label" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -61.0
offset_top = -153.0
offset_right = 60.0
offset_bottom = -43.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.392157)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/normal_font = ExtResource("2_8jj18")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "
[tornado radius=4.0 freq=9][center]x9[/center][/tornado]"

[node name="hint_text" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = -303.0
offset_top = -86.0
offset_right = -98.0
offset_bottom = 89.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.392157)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/normal_font = ExtResource("2_8jj18")
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[shake level=2 rate=5]Drag card here to deposit[/shake]"

[node name="outline" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_uk5p0")
texture = ExtResource("3_1mppw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_u6r7g")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -50.0
offset_top = -88.0
offset_right = -10.0
offset_bottom = -65.0

[node name="card_type" type="RichTextLabel" parent="."]
offset_left = -47.0
offset_top = -52.0
offset_right = 47.0
offset_bottom = -12.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.392157)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/normal_font = ExtResource("5_amiyj")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]sugma[/center]"
scroll_active = false

[node name="deposit_sound" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -1)
stream = ExtResource("6_gkmox")

[node name="glyph" type="Sprite2D" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_8fbax")
position = Vector2(0, 12)
texture = ExtResource("8_gbjpb")

[node name="hand_hint" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(10, 2)
rotation = 4.71239
texture = ExtResource("9_cjryq")
